--- a/coconut/build.gradle
+++ b/coconut/build.gradle
@@ -3,7 +3,10 @@ apply plugin: 'kotlin'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation 'junit:junit:4.12'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
+
 }
 
 sourceCompatibility = "1.7"
