--- a/coconut/build.gradle
+++ b/coconut/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'java-library'
 apply plugin: 'kotlin'
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.github.macaulishchina'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
